<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/currentBalanceFragment"
        android:name="com.amrabdelhamiddiab.charity.presentation.currentBalance.CurrentBalanceFragment"
        android:label="@string/total_balance" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.amrabdelhamiddiab.charity.presentation.home.HomeFragment"
        android:label="@string/home" >
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.amrabdelhamiddiab.charity.presentation.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>