<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/current_value"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="4dp"
        android:text="@string/_125"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_current"
        app:layout_constraintStart_toEndOf="@+id/text_view_current" />

    <TextView
        android:id="@+id/text_view_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/new_value"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/text_layout_new_value"
        app:layout_constraintStart_toStartOf="@+id/text_view_current"
        app:layout_constraintTop_toTopOf="@+id/text_layout_new_value" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_new_value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_view_current_value"
        app:layout_constraintTop_toBottomOf="@+id/text_view_current_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_new_value"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="?attr/textAppearanceHeadline6"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/max_value"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="@+id/text_view_new"
        app:layout_constraintTop_toBottomOf="@+id/text_layout_new_value" />

    <TextView
        android:id="@+id/text_view_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="4dp"
        android:text="@string/_125"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_max"
        app:layout_constraintStart_toStartOf="@+id/text_layout_new_value" />
</androidx.constraintlayout.widget.ConstraintLayout>